--- a/components.css
+++ b/components.css
@@ -87,6 +87,25 @@
     margin-top: 0;
 }
 
+.footer-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.footer-background img {
+    width: 200px;
+    height: auto;
+    opacity: 0.15;
+}
+
 .footer-content {
     display: flex;
     justify-content: space-between;
@@ -103,12 +122,13 @@
 }
 
 .footer-logo {
-    font-family: 'Italiana', serif;
-    font-size: 2.5rem;
-    color: var(--white);
-    text-decoration: none;
     display: block;
     margin-bottom: 0.5rem;
+}
+
+.footer-logo img {
+    height: 45px;
+    width: auto;
 }
 
 .footer-nav {
@@ -199,7 +219,7 @@
 .footer-background img {
     height: 200px;
     width: auto;
-    opacity: 0.5;
+    opacity: 1;
 }
 
 .footer-bottom {
